--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,105 @@
+html,
 body {
-  background-color: #ccc;
+  height: 100%;
+  background: #2b3e51;
+  margin: 0;
+  overflow: hidden;
 }
-@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
-.social a{
-    text-align:center;
-    width:46px;
-    height:46px;
-    float:left;
-    background:#fff;
-    border:1px solid #ccc;
-    box-shadow:0 2px 4px rgba(0,0,0,0.15), inset 0 0 50px rgba(0,0,0,0.1);
-    border-radius:46px;
-    margin:0 10px 10px 0;
-    padding:6px;
-    color:#000;
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
-.github a:hover{background:#191919;color:#fff;}
-.youtube a:hover{background:#c4302b;color:#fff;}
-.google-pluse a:hover{background:#DD4B39;color:#fff;}
-.twitter a:hover{background:#00acee;color:#fff;}
-.instagram a:hover{background:#3f729b;color:#fff;}
-.facebook a:hover{background:#3b5998;color:#fff;}
-.skype a:hover{background:#00aff0;color:#fff;}
-.vk a:hover{background:#5d84ae;color:#fff;}
-.odnoklassniki a:hover{background:#f93;color:#fff;}
-.pinterest a:hover{background:#c8232c;color:#fff;}
-.linkedin a:hover{background:#0e76a8;color:#fff;}
-.telegram a:hover{background:#249bd7;color:#fff;}
-.tumblr a:hover{background:#34526f;color:#fff;}
-.windows a:hover{background:#125acd;color:#fff;}
-.whatsapp a:hover{background:#50b154;color:#fff;}
-.weibo a:hover{background:#d52b2b;color:#fff;}
-.dropbox a:hover{background:#1087dd;color:#fff;}
+
+.cube {
+  width: 60px;
+  height: 60px;
+  background: #f45c41;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+
+.plus-vertical,
+.plus-horizontal {
+  background: #fff;
+  border-radius: 4px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+}
+
+.plus-vertical {
+  height: 50%;
+  width: 5px;
+}
+
+.plus-horizontal {
+  width: 50%;
+  height: 5px;
+}
+
+.quadrant {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.quadrant__item {
+  width: 50%;
+  height: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #f45c41;
+  border-radius: 6px;
+  position: relative;
+}
+
+.quadrant__item__content {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-45deg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.arrow-down,
+.arrow-left,
+.arrow-right,
+.arrow-up {
+  opacity: 0;
+}
+
+.arrow-up {
+  transform: translateY(10px);
+}
+
+.arrow-down {
+  transform: translateY(-10px);
+}
+
+.arrow-left {
+  transform: translateX(10px);
+}
+
+.arrow-right {
+  transform: translateX(-10px);
+}
